# petry-2020-marc

./: README.md  pyproject.toml  requirements.txt
src/petry_2020_marc/: multi_feature_classifier.py
src/petry_2020_marc/core/utils/: metrics.py
