[project]
name = "petry-2020-marc"
version = "1.0.0"
description = "Source code for the paper \"MARC: a robust method for multiple-aspect trajectory classification via space, time, and semantic embeddings\""
readme = "README.md"
requires-python = "~=3.12.0" # Tensorflow does not support Python 3.13 yet
dependencies = [
    "geohash2~=1.1",
    "keras~=3.10.0",
    "numpy~=1.26.4",
    "pandas~=2.2.3",
    "scikit-learn~=1.6.1",
    "tensorflow~=2.19.0",
]

[project.scripts]
multi_feature_classifier = "petry_2020_marc.multi_feature_classifier:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
