[project]
name = "petry-2020-marc"
version = "1.0.0"
description = "Source code for the paper \"MARC: a robust method for multiple-aspect trajectory classification via space, time, and semantic embeddings\""
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "absl-py>=2.3.0",
    "astor>=0.8.1",
    "boto>=2.49.0",
    "boto3>=1.38.25",
    "botocore>=1.38.25",
    "bz2file>=0.98",
    "chardet>=5.2.0",
    "docutils>=0.21.2",
    "gast>=0.6.0",
    "gensim>=4.3.3",
    "geohash2>=1.1",
    "grpcio>=1.71.0",
    "h5py>=3.13.0",
    "idna>=3.10",
    "jmespath>=1.0.1",
    "keras>=3.10.0",
    "keras-applications>=1.0.8",
    "keras-preprocessing>=1.1.2",
    "markdown>=3.8",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "protobuf>=5.29.5",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "s3transfer>=0.13.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "six>=1.17.0",
    "smart-open>=7.1.0",
    "tensorboard>=2.19.0",
    "tensorflow>=2.19.0",
    "termcolor>=3.1.0",
    "urllib3>=2.4.0",
    "werkzeug>=3.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
